--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build
-          path: target/release
+          path: target/release/notion-feed
 
   commit-build:
     needs: build
